tests/macro-tests/cases/widget_new/error_in_when_expr1.stderr
error[E0308]: mismatched types
 --> cases/widget_new/error_in_when_expr1.rs:8:26
  |
8 |             let a: u32 = true;
  |                    ---   ^^^^ expected `u32`, found `bool`
  |                    |
  |                    expected due to this
